infrastructure/ts-backend-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-backend-demo
  labels:
    app.kubernetes.io/name: ts-backend-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ts-backend-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ts-backend-demo
    spec:
      containers:
        - name: ts-backend-demo
          image: ghcr.io/rubenspensky-homelab/ts-backend-demo:1a18d58e4a490f260671b3e6c1754b632c6917f8
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
