infrastructure/ts-backend-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts-backend-demo
  labels:
    app.kubernetes.io/name: ts-backend-demo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ts-backend-demo
  ports:
    - name: http
      port: 80
      targetPort: http
