infrastructure/ts-backend-demo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ts-backend-demo
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: routing
  hostnames:
    - ts-backend-demo.home.lab
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ts-backend-demo
          port: 80
